--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <link rel="stylesheet" href="./dist/main.css" />
     <title>Call Sheet</title>
   </head>
-
   <body>
-    <button id="canvas-demo">Canvas Demo</button>
-    <button id="DOM-demo">DOM Demo</button>
-    <img class="js-stitch-yoda-src" width="20%" style="margin:2rem auto;display:none;"  src="dist/images/yoda-stitch.jpg">
+    <!-- <svg width="300" height="200"> </svg> -->
     <script src="./dist/main.js"></script>
   </body>
 </html>
