--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="shortcut icon" href="https://call-sheet.s3.amazonaws.com/Screen+Shot+2021-06-28+at+12.56.24.png">
+    <link ref="icon" type="image/png" href="https://call-sheet.s3.amazonaws.com/Screen+Shot+2021-06-28+at+12.56.24.png" sizes="560x562">
     <link rel="stylesheet" href="./dist/main.css" />
     <title>Call Sheet</title>
   </head>
