--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta property="og:title" content="Call Sheet" />
+    <meta property="og:title" content="Home Court" />
     <meta property="og:image" content="https://i.imgur.com/nMvzDeO.gif" />
+    <meta propery="og:description" content="Real-time social platform that allows users to find, create, and join nearby pickup sports events using React Google Maps API" />
+    <meta property="og:url" content="https://www.homecourt.club/#/" />
+    <meta property="og:url" content="https://home-court.herokuapp.com/#/" />
     <link rel="shortcut icon" href="https://call-sheet.s3.amazonaws.com/Screen+Shot+2021-06-28+at+12.56.24.png">
     <link ref="icon" type="image/png" href="https://call-sheet.s3.amazonaws.com/Screen+Shot+2021-06-28+at+12.56.24.png" sizes="560x562">
     <link rel="stylesheet" href="./dist/main.css" />
