--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="title" property="og:title" content="Call Sheet" />
-    <meta name="image" property="og:image" content="https://call-sheet.s3.amazonaws.com/callSheet.gif" />
+    <meta name="image" property="og:image" content="https://call-sheet.s3.amazonaws.com/Call-Sheet-SS.png" />
     <meta name="description" property="og:description" content="Data visualizer meant to illustrate any film director’s closest collaborators." />
     <meta name="url" property="og:url" content="https://call-sheet.matthewbarnes.tech//" />
     <link rel="shortcut icon" href="https://call-sheet.s3.amazonaws.com/Screen+Shot+2021-06-28+at+12.56.24.png">
